# apischooldev

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/controllers/: students.py  teacher.py
app/db/: __init__.py
app/models/: students.py  teacher.py
app/routes/: students.py  teacher.py
tests/: test_temp.py
