[tool.poetry]
name = "apischooldev"
version = "0.1.0"
description = ""
authors = ["taconi <igortaconi1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
requests = "^2.26.0"
isort = "^5.9.3"
flake8 = "^3.9.2"
black = "^21.9b0"
ward = "^0.64.0-beta.0"
coverage = "^6.0.1"

[tool.black]
line_length = 79
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true

[tool.ward]
order = "random"
show-diff-symbols = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
